tests/rosetta/transpiler/C/DNS-query.c
// Generated by Mochi 0.10.32 on 2025-07-24 18:26 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>


static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

int main(void) {
    int *res = net.LookupHost;
    int addrs = res[0];
    int err = res[1];
    if (err == nil) {
        puts(str_int(addrs));
    } else {
        printf("%d\n", err);
    }
    return 0;
}
